[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/BuildingUI.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color(0.196078, 0.196078, 0.196078, 0.901961)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color(0.290196, 0.290196, 0.290196, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color(0.45098, 0.45098, 0.45098, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color(0.196078, 0.196078, 0.196078, 0.784314)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="BuildingUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400
margin_top = -250
margin_right = 400
margin_bottom = 250
custom_styles/panel = SubResource( 1 )

[node name="Title" type="Label" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100
margin_top = 10
margin_right = 100
margin_bottom = 30
text = "Building and Decoration"
align = 1

[node name="TabContainer" type="TabContainer" parent="Background"]
anchor_right = 0.3
anchor_bottom = 0.9
margin_left = 20
margin_top = 40
margin_right = -20
margin_bottom = -20
custom_styles/panel = SubResource( 2 )

[node name="Buildings" type="ScrollContainer" parent="Background/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4
margin_top = 32
margin_right = -4
margin_bottom = -4
custom_styles/bg = SubResource( 3 )

[node name="BuildingList" type="ItemList" parent="Background/TabContainer/Buildings"]
margin_right = 196
margin_bottom = 404
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Furniture" type="ScrollContainer" parent="Background/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4
margin_top = 32
margin_right = -4
margin_bottom = -4
custom_styles/bg = SubResource( 3 )

[node name="FurnitureList" type="ItemList" parent="Background/TabContainer/Furniture"]
margin_right = 196
margin_bottom = 404
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Decorations" type="ScrollContainer" parent="Background/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4
margin_top = 32
margin_right = -4
margin_bottom = -4
custom_styles/bg = SubResource( 3 )

[node name="DecorationList" type="ItemList" parent="Background/TabContainer/Decorations"]
margin_right = 196
margin_bottom = 404
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InfoPanel" type="Panel" parent="Background"]
anchor_left = 0.35
anchor_right = 0.7
anchor_bottom = 0.9
margin_left = 20
margin_top = 40
margin_right = -20
margin_bottom = -20
custom_styles/panel = SubResource( 4 )

[node name="Title" type="Label" parent="Background/InfoPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100
margin_top = 10
margin_right = 100
margin_bottom = 30
text = "Selected Item"
align = 1

[node name="Requirements" type="Label" parent="Background/InfoPanel"]
margin_left = 10
margin_top = 40
margin_right = 350
margin_bottom = 100
text = "Requirements:"
autowrap = true

[node name="Cost" type="Label" parent="Background/InfoPanel"]
margin_left = 10
margin_top = 110
margin_right = 350
margin_bottom = 170
text = "Cost:"
autowrap = true

[node name="Effects" type="Label" parent="Background/InfoPanel"]
margin_left = 10
margin_top = 180
margin_right = 350
margin_bottom = 240
text = "Effects:"
autowrap = true

[node name="PlaceButton" type="Button" parent="Background/InfoPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50
margin_top = -40
margin_right = 50
margin_bottom = -10
disabled = true
text = "Place"

[node name="Preview" type="TextureRect" parent="Background"]
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 0.4
margin_left = 20
margin_top = 40
margin_right = -20
margin_bottom = -20
expand = true
stretch_mode = 6

[node name="ComfortLevel" type="Label" parent="Background"]
anchor_left = 0.75
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.9
margin_left = 20
margin_top = 20
margin_right = -20
margin_bottom = -20
text = "Comfort Level: 0

Bonuses:
Energy Restore: +0%
Skill Exp: +0%
Food Effects: +0%"

[node name="CloseButton" type="Button" parent="Background"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30
margin_top = 10
margin_right = -10
margin_bottom = 30
text = "X"

[connection signal="item_selected" from="Background/TabContainer/Buildings/BuildingList" to="." method="_on_building_selected"]
[connection signal="item_selected" from="Background/TabContainer/Furniture/FurnitureList" to="." method="_on_furniture_selected"]
[connection signal="item_selected" from="Background/TabContainer/Decorations/DecorationList" to="." method="_on_decoration_selected"]
[connection signal="pressed" from="Background/InfoPanel/PlaceButton" to="." method="_on_place_button_pressed"]
[connection signal="pressed" from="Background/CloseButton" to="." method="_on_close_button_pressed"]